--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,28 +1,24 @@
 name: RenderingLib
 description: Rendering without the doll parts
-version: 1.24.2
+version: 2.2.0
 homepage: https://github.com/FarragoFiction/RenderingLib
 author: jadedResearcher, paradoxLands
 
 environment:
-  sdk: '>=1.24.2 <2.0.0'
+  sdk: '>=2.2.0 <3.0.0'
 
 dependencies:
-  js: ^0.6.0
+  js: any
   CommonLib:
-    git:
-      url: git://github.com/FarragoFiction/CommonLib.git
-      ref: "Dart-1.24.2"
+    git: git://github.com/FarragoFiction/CommonLib.git
   LoaderLib:
-    git:
-      url: git://github.com/FarragoFiction/LoaderLib.git
-      ref: "Dart-1.24.2"
+    git: git://github.com/FarragoFiction/LoaderLib.git
 
 dev_dependencies:
-  browser: ^0.10.0
-  dart_to_js_script_rewriter: ^1.0.1
+  build_runner: ^1.0.0
+  build_test: ^0.10.2
+  build_web_compilers: ^0.4.0
 
-transformers:
-- $dart2js:
-    sourceMaps: true
-    commandLineOptions: [--fast-startup, --trust-type-annotations]
+web:
+  compiler:
+    debug: dartdevc
